--- a/package.json
+++ b/package.json
@@ -1,28 +1,22 @@
 {
   "private": true,
-  "engines": {
-    "pnpm": ">=7.0.0"
-  },
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.27.0",
-    "@nuxtjs/eslint-config-typescript": "^11.0.0",
     "@nuxtjs/google-fonts": "3.0.0-0",
-    "@nuxtjs/tailwindcss": "^5.3.3",
-    "@pinia/nuxt": "^0.4.2",
-    "@vueuse/core": "^9.3.0",
-    "@vueuse/nuxt": "^9.3.0",
-    "eslint": "^8.24.0",
+    "@nuxtjs/tailwindcss": "^5.3.5",
+    "eslint": "^8.25.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.6.0",
     "nuxt": "3.0.0-rc.11",
-    "typescript": "^4.8.4",
-    "vue-tsc": "^0.40.13",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "webpack": "^5.74.0"
   }
 }
